--- a/OnedaySpring/src/main/webapp/WEB-INF/web.xml
+++ b/OnedaySpring/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,9 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml
+		classpath:one/day/spring/spring-mybatis.xml <!-- 스프링, 마이바티스 연동 설정파일  -->
+		</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -29,5 +31,21 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!-- 	utf-8인코딩 설정(한글 입력받기 잘 된다.) -->
+	<filter>
+		<filter-name>encoding</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>utf-8</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+  		<filter-name>encoding</filter-name>
+  		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 
 </web-app>
